@@ -1,3 +1,9 @@
+2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j97-UNSTABLE
+
+ * Switched rows and columns in album properties.
+
+ * CHANGE: Removed Support for:  $_SERVER['HTTP_HOST'] in css files 
+
 2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j96-UNSTABLE
 
  * Fix: ZLORIFX == vs. ===, using strcmp() now in drawselect.
